--- a/src/app/screens/tabs/tab3/tab3.page.html
+++ b/src/app/screens/tabs/tab3/tab3.page.html
@@ -11,5 +11,5 @@
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+  <ion-button href="../../signup"></ion-button>
 </ion-content>
