small change to singup

--- a/src/app/screens/auth/signup/signup.page.html
+++ b/src/app/screens/auth/signup/signup.page.html
@@ -1,8 +1,8 @@
 <ion-content class="signup">
   <form #form="ngForm" (ngSubmit)="register(form)">
     <ion-grid>
-      <ion-row style="justify-content: center">
-        <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
+      <ion-row align-self-center>
+        <ion-col size-md="6" size-lg="5" size-xs="12">
           <div text-center>
             <h3>Create your account!</h3>
           </div>
