changed forlder structure, and deafult routing. Have backbutton now

--- a/src/app/screens/auth/start/start.page.html
+++ b/src/app/screens/auth/start/start.page.html
@@ -10,7 +10,7 @@
       </div>
     </ion-row>
     <ion-row class="ion-justify-content-center ion-margin">
-      <img src="{{yourGifURL}}" />
+      <img src="{{gifURL}}" />
     </ion-row>
     <ion-row class="ion-justify-content-center">
       <ion-button [routerLink]="['/signup']">Sign up now!</ion-button>
