--- a/src/app/screens/auth/signup/signup.page.html
+++ b/src/app/screens/auth/signup/signup.page.html
@@ -1,3 +1,11 @@
+<ion-header>
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-header>
+
 <ion-content class="signup">
   <form #form="ngForm" (ngSubmit)="register(form)">
     <ion-grid>
