Validation now works

--- a/src/app/screens/auth/start/start.page.html
+++ b/src/app/screens/auth/start/start.page.html
@@ -5,15 +5,15 @@
         <h1>EMS</h1>
       </ion-label>
       <div>
-        <ion-button [routerLink]="['/signup']">Sign up</ion-button>
-        <ion-button>Login</ion-button>
+        <ion-button href="/signup">Sign up</ion-button>
+        <ion-button href="/login">Login</ion-button>
       </div>
     </ion-row>
     <ion-row class="ion-justify-content-center ion-margin">
       <img src="{{gifURL}}" />
     </ion-row>
     <ion-row class="ion-justify-content-center">
-      <ion-button [routerLink]="['/signup']">Sign up now!</ion-button>
+      <ion-button href="/signup">Sign up now!</ion-button>
     </ion-row>
   </ion-grid>
 </ion-content>
