--- a/src/app/screens/auth/signup/signup.page.scss
+++ b/src/app/screens/auth/signup/signup.page.scss
@@ -3,3 +3,12 @@
   height: 100%;
   justify-content: center;
 }
+
+ion-content.background {
+  --background: url(../../../../assets/img/start.jpg) 0 0/100% 100% no-repeat;
+}
+
+.rcorners {
+  border-radius: 25px;
+  background: #73ad21;
+}
