--- a/src/app/screens/auth/signup/signup.page.html
+++ b/src/app/screens/auth/signup/signup.page.html
@@ -1,50 +1,65 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-back-button></ion-back-button>
-    </ion-buttons>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content class="signup background no-scroll">
   <ion-grid>
-    <ion-row align-self-center>
-      <ion-col class="rcorners" size-md="6" size-lg="5" size-xs="12">
-        <div class="ion-text-center">
-          <h3>Create your account!</h3>
-        </div>
-        <form [formGroup]="signupForm" (ngSubmit)="onSubmit(signupForm.value)">
-          <ion-item>
-            <ion-input id="name" formControlName="name" type="text" placeholder="Name"></ion-input>
-            <div *ngIf="name.invalid && (name.dirty || name.touched)" class="alert alert-danger">
-              <div *ngIf="name.errors.required">Name is required.</div>
-            </div>
-          </ion-item>
-          <ion-item>
-            <ion-input id="email" formControlName="email" type="email" placeholder="your@email.com"></ion-input>
-            <div *ngIf="email.invalid && (email.touched)" class="alert alert-danger">
-              <div *ngIf="email.errors">Email is required</div>
-            </div>
-          </ion-item>
-          <ion-item>
-            <ion-input id="mobile" formControlName="mobile" type="tel" placeholder="Mobile"></ion-input>
-            <div *ngIf="mobile.invalid && (mobile.touched)" class="alert alert-danger">
-              <div *ngIf="mobile.errors">Mobile is required and should conatin 8 digits</div>
-            </div>
-          </ion-item>
-          <ion-item>
-            <ion-input formControlName="password" type="password" placeholder="Password"></ion-input>
-            <div *ngIf="password.invalid && (password.touched)" class="alert alert-danger">
-              <div *ngIf="password.errors">
-                Password is required and needs 1 uppercase letter and a special character
+    <ion-col class="ion-padding-top ion-align-self-end">
+      <ion-row class="ion-justify-items-center ion-align-items-end">
+        <ion-col class="rcorners" size-md="6" size-lg="5" size-xs="12">
+          <div class="ion-text-center">
+            <h3>Sign up with</h3>
+          </div>
+          <ion-button color="primary" expand="block">Facebook</ion-button>
+          <ion-button color="danger" expand="block">Google</ion-button>
+          <ion-row class="ion-align-items-stretch" style="margin-top: 1em">
+            <h3>Or</h3>
+          </ion-row>
+
+          <form [formGroup]="signupForm" (ngSubmit)="onSubmit(signupForm.value)">
+            <ion-item>
+              <ion-input id="name" formControlName="name" type="text" placeholder="Name"></ion-input>
+              <div *ngIf="name.invalid && (name.dirty || name.touched)" class="alert alert-danger">
+                <div *ngIf="name.errors.required">Name is required.</div>
               </div>
-            </div>
-          </ion-item>
-        </form>
-        <div>
-          <ion-button size="large" type="submit" [disabled]="signupForm.invalid" expand="block">Register</ion-button>
-        </div>
-      </ion-col>
-    </ion-row>
+            </ion-item>
+            <ion-item>
+              <ion-input id="email" formControlName="email" type="email" placeholder="your@email.com"></ion-input>
+              <div *ngIf="email.invalid && (email.touched)" class="alert alert-danger">
+                <div *ngIf="email.errors">Email is required</div>
+              </div>
+            </ion-item>
+            <ion-item>
+              <ion-input id="mobile" formControlName="mobile" type="tel" placeholder="Mobile"></ion-input>
+              <div *ngIf="mobile.invalid && (mobile.touched)" class="alert alert-danger">
+                <div *ngIf="mobile.errors">Mobile is required and should conatin 8 digits</div>
+              </div>
+            </ion-item>
+            <ion-item>
+              <!-- #docregion toggle -->
+              <input matInput [matDatepicker]="picker" placeholder="Beginning Date" />
+              <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+              <mat-datepicker #picker></mat-datepicker>
+              <!-- #enddocregion toggle -->
+            </ion-item>
+            <ion-item>
+              <ion-input formControlName="password" type="password" placeholder="Password"></ion-input>
+              <div *ngIf="password.invalid && (password.touched)" class="alert alert-danger">
+                <div *ngIf="password.errors">
+                  Password is required and needs 1 uppercase letter and a special character
+                </div>
+              </div>
+            </ion-item>
+          </form>
+          <div>
+            <ion-button size="large" type="submit" color="warning" [disabled]="signupForm.invalid" expand="block"
+              >Submit</ion-button
+            >
+          </div>
+          <ion-row class="ion-justify-content-end">
+            <p>Already have an account?</p>
+          </ion-row>
+          <ion-row class="ion-justify-content-end">
+            <a href="/login">Log in</a>
+          </ion-row>
+        </ion-col>
+      </ion-row>
+    </ion-col>
   </ion-grid>
 </ion-content>
