--- a/src/app/screens/tabs/tab1/tab1.page.html
+++ b/src/app/screens/tabs/tab1/tab1.page.html
@@ -1,22 +1,15 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title> Tab 1 </ion-title>
+    <ion-title> Tab 3 </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
+      <ion-title size="large">Tab 3</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
-  <div *ngIf="loading">Loading...</div>
-  <div *ngIf="error">Error :(</div>
-  <div *ngIf="rates">
-    <div *ngFor="let rate of rates">
-      <p>{{rate.currency}}: {{rate.rate}}</p>
-    </div>
-  </div>
+  <ion-button href="../../signup"></ion-button>
 </ion-content>
