--- a/src/app/screens/auth/login/login.page.scss
+++ b/src/app/screens/auth/login/login.page.scss
@@ -14,9 +14,8 @@ ion-content.background {
   margin: 50px;
 }
 
-.rcorners {
-  border-radius: 25px;
-  background: whitesmoke;
+.login ion-button {
+  margin-top: 12px;
 }
 
 .login ion-icon {
