--- a/src/app/screens/auth/signup/signup.page.html
+++ b/src/app/screens/auth/signup/signup.page.html
@@ -13,34 +13,35 @@
           </ion-row>
 
           <form [formGroup]="signupForm" (ngSubmit)="onSubmit(signupForm)">
-            <ion-item>
+            <ion-item color="transparent">
               <ion-input id="name" formControlName="name" type="text" placeholder="Name"></ion-input>
               <div *ngIf="name.invalid && (name.dirty || name.touched)" class="alert alert-danger">
                 <div *ngIf="name.errors.required">Name is required.</div>
               </div>
             </ion-item>
-            <ion-item>
+            <ion-item color="transparent">
               <ion-input id="email" formControlName="email" type="email" placeholder="your@email.com"></ion-input>
               <div *ngIf="email.invalid && (email.touched)" class="alert alert-danger">
                 <div *ngIf="email.errors">Email is required</div>
               </div>
             </ion-item>
-            <ion-item>
+            <ion-item color="transparent">
               <input
                 matInput
                 [matDatepicker]="picker"
                 placeholder="Birthday"
                 id="birthday"
-                readonly
+                disabled
+                color="transparent"
                 formControlName="birthday"
               />
               <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-              <mat-datepicker #picker></mat-datepicker>
+              <mat-datepicker disabled="false" #picker></mat-datepicker>
             </ion-item>
             <div *ngIf="birthday.invalid && (birthday.touched)" class="alert alert-danger">
               <div *ngIf="birthday.errors">birthday is required</div>
             </div>
-            <ion-item>
+            <ion-item color="transparent">
               <ion-input formControlName="password" type="password" placeholder="Password"></ion-input>
             </ion-item>
             <div *ngIf="password.invalid && (password.touched)" class="alert alert-danger">
