--- a/src/app/components/header-bar/header-bar.component.scss
+++ b/src/app/components/header-bar/header-bar.component.scss
@@ -11,7 +11,7 @@ ion-avatar {
 }
 
 ion-header {
-    background-color: mediumpurple;
+    background-color: darkorange;
 }
 
 ion-button {
@@ -21,7 +21,7 @@ ion-button {
 
 .regular {
     --background: black;
-    --color-hover: mediumpurple;
+    --color-hover: darkorange;
 }
 
 .profile {
