more navigation stuff

--- a/src/app/navigation/header-bar/header-bar.page.html
+++ b/src/app/navigation/header-bar/header-bar.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>club-create</ion-title>
+    <ion-title>header-bar</ion-title>
   </ion-toolbar>
 </ion-header>
 
