Create club form started

--- a/src/app/pages/club-create/club-create.page.html
+++ b/src/app/pages/club-create/club-create.page.html
@@ -1,9 +1,8 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>club-create</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
-
+  <div>
+    <app-text-input placeholderValue="Klubnavn"></app-text-input>
+    <app-text-input placeholderValue="Locations"></app-text-input>
+    <app-text-input placeholderValue="Description"></app-text-input>
+    <app-confirmation-button title="Create Club"></app-confirmation-button>
+  </div>
 </ion-content>
