More navigation stuff

--- a/src/app/components/text-input/text-input.component.html
+++ b/src/app/components/text-input/text-input.component.html
@@ -1,2 +1,2 @@
-<ion-input placeholder={{placeholderValue}} type="text" [(ngModel)]="value" text-right id="input">
+<ion-input class="text-input" clearInput placeholder={{placeholderValue}} type="text" [(ngModel)]="value" text-center id="input">
 </ion-input>
