--- a/src/app/navigation/header-bar/header-bar.page.html
+++ b/src/app/navigation/header-bar/header-bar.page.html
@@ -1,9 +1,1 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>header-bar</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content>
-
-</ion-content>
+<app-header-bar-component></app-header-bar-component>
