--- a/src/app/components/header-bar/header-bar.component.html
+++ b/src/app/components/header-bar/header-bar.component.html
@@ -1,4 +1,22 @@
 <ion-header>
+  <ion-toolbar>
+    <ion-title>{{ title }} </ion-title>
+    <ion-buttons slot="primary">
+      <ion-button *ngIf="platform.is('desktop')" class="regular" (click)="tappedFindClubs()">Find Clubs</ion-button>
+      <ion-button *ngIf="platform.is('desktop')" class="regular" (click)="tappedFindEvents()">Find Events</ion-button>
+      <ion-button *ngIf="platform.is('desktop')" class="regular" (click)="tappedMyEvents()">My Events</ion-button>
+      <ion-button *ngIf="platform.is('desktop')" class="regular" (click)="tappedMyClubs()">My Clubs</ion-button>
+      <ion-button class="profile" ion-item (click)="tappedProfile($event)">
+        <ion-avatar>
+          <img
+            src="https://www.iconfinder.com/data/icons/mixed-communication-and-ui-pack-1/48/general_pack_NEW_glyph_profile-512.png"
+          />
+        </ion-avatar>
+      </ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-header>
+<!-- <ion-header>
   <ion-title text-left>Event Management System</ion-title>
   <ion-grid>
     <ion-row>
@@ -18,4 +36,4 @@
       </ion-col>
     </ion-row>
   </ion-grid>
-</ion-header>
+</ion-header> -->
