--- a/src/app/components/header-bar/header-bar.component.scss
+++ b/src/app/components/header-bar/header-bar.component.scss
@@ -1,7 +1,7 @@
 ion-avatar {
   img {
-    width: 70% !important;
-    height: 70% !important;
+    width: 60% !important;
+    height: 60% !important;
     max-width: 100px !important; //any size
     max-height: 100px !important; //any size
     margin: auto;
@@ -10,8 +10,8 @@ ion-avatar {
   justify-content: center;
 }
 
-ion-header {
-  background-color: darkorange;
+ion-toolbar {
+  --background: darkorange;
 }
 
 ion-button {
@@ -32,4 +32,5 @@ ion-button {
 ion-title {
   text-align: left;
   padding-left: 16px;
+  --color: black;
 }
