Create club form done

--- a/src/app/components/header-bar/header-bar.component.scss
+++ b/src/app/components/header-bar/header-bar.component.scss
@@ -17,16 +17,22 @@ ion-toolbar {
 ion-button {
   padding-left: 8px;
   padding-right: 8px;
-}
 
-.regular {
-  --background: black;
-  --color-hover: darkorange;
 }
 
 .profile {
   --background: transparent;
   --box-shadow: 0;
+}
+
+.regular {
+  --background: black;
+  --color: AliceBlue;
+}
+
+.regular:hover  {
+ --background: black;
+ --color: darkorange;
 }
 
 ion-title {
