--- a/src/app/pages/auth/start/start.page.scss
+++ b/src/app/pages/auth/start/start.page.scss
@@ -1,3 +1,16 @@
 ion-content.background {
   --background: url(../../../../assets/img/start.jpg) 0 0/100% 100% no-repeat;
 }
+
+ion-toolbar {
+  --background: transparent;
+}
+
+ion-button {
+  --padding: 20px;
+}
+
+ion-title {
+  text-align: left;
+  padding-left: 16px;
+}
