Login test is good

--- a/src/app/pages/auth/login/login.page.html
+++ b/src/app/pages/auth/login/login.page.html
@@ -24,7 +24,9 @@
             </ion-item>
           </div>
           <div>
-            <ion-button size="large" type="submit" [disabled]="loginForm.invalid" expand="block">Login</ion-button>
+            <ion-button id="submit" size="large" type="submit" [disabled]="loginForm.invalid" expand="block"
+              >Login</ion-button
+            >
           </div>
         </form>
         <ion-row class="ion-justify-content-end">
