--- a/src/app/pages/auth/signup/signup.page.html
+++ b/src/app/pages/auth/signup/signup.page.html
@@ -1,44 +1,44 @@
 <ion-content class="signup background no-scroll">
   <ion-grid>
-    <ion-col class="ion-padding-top ion-align-self-end">
-      <ion-row class="ion-justify-items-center ion-align-items-end">
-        <ion-col class="rcorners" size-md="6" size-lg="5" size-xs="12">
-          <div class="ion-text-center">
-            <h3>Sign up with</h3>
-          </div>
-          <ion-button color="primary" expand="block">Facebook</ion-button>
-          <ion-button color="danger" expand="block">Google</ion-button>
-          <ion-row class="ion-align-items-stretch" style="margin-top: 1em">
-            <h3>Or</h3>
-          </ion-row>
-
-          <form [formGroup]="signupForm" (ngSubmit)="onSubmit(signupForm)">
-            <ion-item>
-              <ion-input id="name" formControlName="name" type="text" placeholder="Name"></ion-input>
-              <div *ngIf="name.invalid && (name.dirty || name.touched)" class="alert alert-danger">
-                <div *ngIf="name.errors.required">Name is required.</div>
-              </div>
-            </ion-item>
-            <ion-item>
-              <ion-input id="email" formControlName="email" type="email" placeholder="your@email.com"></ion-input>
-              <div *ngIf="email.invalid && (email.touched)" class="alert alert-danger">
-                <div *ngIf="email.errors">Email is required</div>
-              </div>
-            </ion-item>
-            <ion-item>
-              <input
-                matInput
-                [matDatepicker]="picker"
-                placeholder="Birthday"
-                id="birthday"
-                readonly
-                formControlName="birthday"
-              />
-              <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-              <mat-datepicker #picker></mat-datepicker>
-            </ion-item>
-            <div *ngIf="birthday.invalid && (birthday.touched)" class="alert alert-danger">
-              <div *ngIf="birthday.errors">birthday is required</div>
+    <ion-row class="ion-justify-items-center ion-align-items-end">
+      <ion-col size-md="6" size-lg="5" size-xs="12">
+        <ion-button color="primary" expand="block">Sign up with Facebook</ion-button>
+        <ion-button color="danger" expand="block">Sign up with Google</ion-button>
+        <ion-row class="ion-align-items-stretch" style="margin-top: 1em">
+          <h4>Or create a user</h4>
+        </ion-row>
+        <form [formGroup]="signupForm" (ngSubmit)="onSubmit(signupForm)">
+          <ion-item>
+            <ion-input id="name" formControlName="name" type="text" placeholder="Name"></ion-input>
+            <div *ngIf="name.invalid && (name.dirty || name.touched)" class="alert alert-danger">
+              <div *ngIf="name.errors.required">Name is required.</div>
+            </div>
+          </ion-item>
+          <ion-item>
+            <ion-input id="email" formControlName="email" type="email" placeholder="your@email.com"></ion-input>
+            <div *ngIf="email.invalid && (email.touched)" class="alert alert-danger">
+              <div *ngIf="email.errors">Email is required</div>
+            </div>
+          </ion-item>
+          <ion-item>
+            <ion-input id="phoneNumber" formControlName="phoneNumber" placeholder="88225566"></ion-input>
+            <div *ngIf="phoneNumber.invalid && (phoneNumber.touched)" class="alert alert-danger">
+              <div *ngIf="phoneNumber.errors">phoneNumber is required</div>
+            </div>
+          </ion-item>
+          <ion-item>
+            <input
+              matInput
+              [matDatepicker]="picker"
+              placeholder="Birthday"
+              id="birthDate"
+              readonly
+              formControlName="birthDate"
+            />
+            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+            <div *ngIf="birthDate.invalid && (birthDate.touched)" class="alert alert-danger">
+              <div *ngIf="birthDate.errors">birthDate is required</div>
             </div>
             <ion-item>
               <ion-input formControlName="password" type="password" placeholder="Password"></ion-input>
