--- a/src/app/components/club-manage/club-manage-subcriptions/club-manage-subcriptions.component.scss
+++ b/src/app/components/club-manage/club-manage-subcriptions/club-manage-subcriptions.component.scss
@@ -1,69 +1,83 @@
 .signup ion-grid {
-    height: 100%;
+  height: 100%;
 }
 
 .signup ion-row {
-    justify-content: center;
+  justify-content: center;
 }
-  
+
 ion-content.background {
---background: url(../../../../assets/img/start.png) 0 0/100% 100% no-repeat;
+  --background: url(../../../../assets/img/start.png) 0 0/100% 100% no-repeat;
 }
 
 .signup ion-col {
-padding: 20px;
-margin: 50px;
+  padding: 20px;
+  margin: 50px;
 }
 
 .signup ion-icon {
-margin: 20px;
+  margin: 20px;
 }
 
 ion-item-divider {
-    --background: clear;
-    --color: black;
+  --background: clear;
+  --color: black;
 }
 
 ion-textarea {
-    --padding-top: 5px;
+  --padding-top: 5px;
 }
 
 ion-list {
-    padding: 10px;
+  padding: 10px;
 }
 
 .subscription-header {
-    //background-color:#3880ff;
-    border-radius: 15px;
+  //background-color:#3880ff;
+  border-radius: 15px;
 }
 
 .rcorners {
-    border-radius: 25px;
-    background: #3880ff;
-    padding: 20px;
+  border-radius: 25px;
+  background: #3880ff;
+  padding: 20px;
 }
 
 h2 {
-    color: white;
+  color: white;
 }
 
 h1 {
-    margin-top:40px;
+  margin-top: 40px;
 }
 
 ion-card {
-    border-radius: 15px;
-    --background: #3880ff;
+  border-radius: 15px;
+  --background: #3880ff;
 }
 
 ion-card-title {
-    --color: white;
+  --color: white;
 }
 
 ion-card-subtitle {
-    --color: white;
+  --color: white;
 }
 
 ion-item-divider {
-    margin-top: 50px;
+  margin-top: 50px;
+}
+
+.selecter {
+  background-color: white;
+}
+
+#submit {
+  padding-top: 15px;
+}
+
+.form-content {
+  border-radius: 15px;
+  background-color: white;
+  padding: 5px;
 }
