--- a/src/app/pages/club/club-manage/club-manage.page.html
+++ b/src/app/pages/club/club-manage/club-manage.page.html
@@ -1,28 +1,28 @@
-<mat-drawer-container class="example-container" autosize>
+<mat-drawer-container *ngIf="platform.is('desktop')" class="example-container" autosize>
   <mat-drawer opened="true" disableClose="true" #drawer class="example-sidenav" mode="side">
     <ion-list>
       <ion-item>
-        <ion-button (click)="sidebarContent = SidebarContent.club">
+        <ion-button fill="clear" (click)="sidebarContent = SidebarContent.club">
           <ion-label>Manage Club</ion-label>
         </ion-button>
       </ion-item>
       <ion-item>
-        <ion-button (click)="sidebarContent = SidebarContent.events">
+        <ion-button fill="clear" (click)="sidebarContent = SidebarContent.events">
           <ion-label>Manage Events</ion-label>
         </ion-button>
       </ion-item>
       <ion-item>
-        <ion-button (click)="sidebarContent = SidebarContent.members">
+        <ion-button fill="clear" (click)="sidebarContent = SidebarContent.members">
           <ion-label>Manage Members</ion-label>
         </ion-button>
       </ion-item>
       <ion-item>
-        <ion-button (click)="sidebarContent = SidebarContent.instructors">
+        <ion-button fill="clear" (click)="sidebarContent = SidebarContent.instructors">
           <ion-label>Manage Instructors</ion-label>
         </ion-button>
       </ion-item>
       <ion-item>
-        <ion-button (click)="sidebarContent = SidebarContent.subscriptions">
+        <ion-button fill="clear" (click)="sidebarContent = SidebarContent.subscriptions">
           <ion-label>Manage Subscriptions</ion-label>
         </ion-button>
       </ion-item>
@@ -35,7 +35,8 @@
     <ion-label *ngIf="sidebarContent==SidebarContent.events">EVENTS</ion-label>
     <ion-label *ngIf="sidebarContent==SidebarContent.members">MEMBERS</ion-label>
     <ion-label *ngIf="sidebarContent==SidebarContent.instructors">INSTRUCTORS</ion-label>
-    <app-club-manage-subcriptions *ngIf="sidebarContent==SidebarContent.subscriptions">SUBSRIPTIONS</app-club-manage-subcriptions>
+    <app-club-manage-subcriptions class="content" *ngIf="sidebarContent==SidebarContent.subscriptions"
+      >SUBSRIPTIONS</app-club-manage-subcriptions
+    >
   </div>
-
 </mat-drawer-container>
