works and looks okay

--- a/src/app/pages/club/club-list/club-list.page.scss
+++ b/src/app/pages/club/club-list/club-list.page.scss
@@ -1,3 +1,10 @@
 .searchButton {
   margin-top: 12px;
 }
+
+.goToClubButton {
+  position: absolute;
+  top: 2rem;
+  right: 1rem;
+  z-index: 1;
+}
