--- a/src/app/pages/club/club-list/club-list.page.html
+++ b/src/app/pages/club/club-list/club-list.page.html
@@ -1,24 +1,25 @@
-<ion-content>
-  <ion-grid>
-    <ion-row class="ion-justify-content-around">
-      <ion-col size="8">
-      <ion-searchbar></ion-searchbar>
-      </ion-col>
-      <ion-col>
-      <ion-button class="searchButton" style="width: 100%">Find Local Clubs</ion-button>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+<ion-row class="ion-justify-content-around ion-margin">
+  <ion-col size="7">
+    <ion-searchbar></ion-searchbar>
+  </ion-col>
+  <ion-col>
+    <ion-button class="searchButton" fill="solid">Find Local Clubs</ion-button>
+  </ion-col>
+</ion-row>
 
-  <div *ngFor="let club of clubs | async">
-  <ion-card>
-    <ion-card-header>
-      <ion-card-title>{{club.name}}</ion-card-title>
-      <ion-card-subtitle>{{club.address}}</ion-card-subtitle>
-    </ion-card-header>
-    <ion-card-content>
-      {{club.description}}
-     </ion-card-content>
-  </ion-card>
-</div>
+<ion-content>
+  <ion-list>
+    <div *ngFor="let club of clubs | async">
+      <ion-card>
+        <ion-row class="ion-justify-content-end ion-align-self-center">
+          <ion-button class="goToClubButton">Go to club</ion-button>
+        </ion-row>
+        <ion-card-header>
+          <ion-card-title>{{club.name}}</ion-card-title>
+          <ion-card-subtitle>{{club.address}}</ion-card-subtitle>
+        </ion-card-header>
+        <ion-card-content> {{club.description}} </ion-card-content>
+      </ion-card>
+    </div>
+  </ion-list>
 </ion-content>
