--- a/src/app/pages/club/club-list/club-list.page.html
+++ b/src/app/pages/club/club-list/club-list.page.html
@@ -8,18 +8,16 @@
 </ion-row>
 
 <ion-content>
-  <ion-list>
-    <div *ngFor="let club of filteredClubs">
-      <ion-card>
-        <ion-row class="ion-justify-content-end ion-align-self-center">
-          <ion-button class="goToClubButton">Go to club</ion-button>
-        </ion-row>
-        <ion-card-header>
-          <ion-card-title>{{club.name}}</ion-card-title>
-          <ion-card-subtitle>{{club.address}}</ion-card-subtitle>
-        </ion-card-header>
-        <ion-card-content> {{club.description}} </ion-card-content>
-      </ion-card>
-    </div>
+  <ion-list *ngFor="let club of filteredClubs">
+    <ion-card>
+      <ion-row class="ion-justify-content-end ion-align-self-center">
+        <ion-button class="goToClubButton">Go to club</ion-button>
+      </ion-row>
+      <ion-card-header>
+        <ion-card-title>{{club.name.toUpperCase()}}</ion-card-title>
+        <ion-card-subtitle>{{club.address}}</ion-card-subtitle>
+      </ion-card-header>
+      <ion-card-content> {{club.description}} </ion-card-content>
+    </ion-card>
   </ion-list>
 </ion-content>
