--- a/src/app/pages/club/club-list/club-list.page.scss
+++ b/src/app/pages/club/club-list/club-list.page.scss
@@ -9,6 +9,11 @@
   z-index: 1;
 }
 
+ion-list {
+  background-color: #76c5f0;
+  margin-top: -8px;
+}
+
 ion-card {
   --color: black;
   --background: rgb(250, 250, 250);
